@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.5.6-svn-b18';
+$gallery->version = '1.5.6-svn-b19';
 $gallery->config_version = 96;
 $gallery->album_version = 37;
 $gallery->user_version = 6;
