@@ -96,6 +96,7 @@
 ../publish_xp.php
 ../publish_xp_docs.php
 ../rearrange.php
+../rebuild_capture_dates.php
 ../register.php 
 ../rename_album.php
 ../reset_votes.php
