@@ -1,3 +1,10 @@
+2007-03-05 Jens Tkotz <jens@peino.de> 1.5.6-svn-b19
+
+ * Fix/Change: Added new functionality to rebuild capture dates.
+               This makes it possible to fix broken dates, and also
+               have correct captures dates when jhead or exiftags were
+               installed later.
+
 2007-03-04 Jens Tkotz <jens@peino.de> 1.5.6-svn-b18
 
  * Fix: Dont strip port from urls.
